# chat-platform

./: .gitignore  README.md
client/: README.md  package.json  pnpm-lock.yaml
client/src/: App.css  App.tsx
client/src-tauri/: Cargo.toml
client/src-tauri/src/: lib.rs
server/: AUTH_FLOW_DIAGRAM.txt  Cargo.toml  WEBSOCKET_AUTH_GUIDE.md  docs.md  test_websocket.html
server/src/: main.rs  message_operations.rs  user_operations.rs  websocket_handler.rs
